Update to Java 17! (#301)
* Update to Java 17

* Configuring add-opens